--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <h1 class="user-name">Roslik Oleg</h1>
         </header>
     <main class="all"></main>
-        <h2 class="information">About me</h2>
+        <h2 class="h">About me</h2>
         <p behavior="alternate" class="about-me">
          I like to learn something new. I am in school, in the 10th grade. I lead a healthy and active life. My favorite sport is volleyball.
          <br>
          Ever since elementary school, I have been drawn to programming.In the future I plan to become a front-end developer
         </p>
-        <h2 class="skills">
+        <h2 class="h">
             Skills
         </h2>
         <ul class="skills-list">
@@ -29,7 +29,14 @@
             <li>Git</li>
             <li>English-A2</li>
         </ul>
-        
+        <h2 class="h">
+            Contact
+        </h2>
+            <ul class="contact">
+                <li>My discord: Олежик#3345</li>
+                <li>Email:oleguo534@hmail.com</li>
+                <li>Address:Belarus,Minsk,Stolbtc</li>
+            </ul>
     </main>
 </body>
 </html>
